--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
          
              <p>
-              My name is Karan Bairagi. I am currently studying IMD,in Algonquin College.
+              My name is Karan Bairagi. I am currently studying IMD,in Algonquin College Ottawa.
         </p>
         </main>
             <section>
